# rust-hands-on

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
migrations/: 20241222230000_init.up.sql
src/: data_types.rs  lib.rs  main.rs
src/handlers/: mod.rs
src/storage/: memory.rs  mod.rs  postgres.rs
src/web/: handlers.rs  routes.rs
tests/: lib.rs  postgres_integration.rs
tests/storage/: postgres.rs
tests/web/: mod.rs
