[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
tower = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
serde_json = "1.0.149"

[features]
default = ["in_memory"]
in_memory = []
postgres = []
